Reuse random object